--- a/frontend/index.html
+++ b/frontend/index.html
@@ -145,15 +145,14 @@
 
     <h2>My List</h2>
     <div id="categoriesContainer"></div>
-
-
   </div>
 
   <script>
-    const API_URL = "http://127.0.0.1:8000/items";
+    // Automatically use the current domain (Azure or local)
+    const API_BASE = window.location.origin;
 
     async function fetchItems() {
-      const res = await fetch(API_URL);
+      const res = await fetch(`${API_BASE}/items`);
       const items = await res.json();
 
       // group items by category
@@ -204,7 +203,7 @@
       const quantity = document.getElementById("itemQty").value || 1;
       const category = document.getElementById("itemCategory").value;
 
-      await fetch(API_URL, {
+      await fetch(`${API_BASE}/items`, {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ name, quantity: parseInt(quantity), category })
@@ -217,12 +216,12 @@
     }
 
     async function togglePurchased(id) {
-      await fetch(`${API_URL}/${id}/toggle`, { method: "PATCH" });
+      await fetch(`${API_BASE}/items/${id}/toggle`, { method: "PATCH" });
       fetchItems();
     }
 
     async function deleteItem(id) {
-      await fetch(`${API_URL}/${id}`, { method: "DELETE" });
+      await fetch(`${API_BASE}/items/${id}`, { method: "DELETE" });
       fetchItems();
     }
 
@@ -231,7 +230,7 @@
       const resultsList = document.getElementById("searchResult");
       resultsList.innerHTML = "";
 
-      const res = await fetch(API_URL);
+      const res = await fetch(`${API_BASE}/items`);
       const items = await res.json();
       const results = items.filter(item => 
         item.name.toLowerCase().includes(query) || item.id.toString() === query
